# potman

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: error.rs  handshake.rs  lib.rs  main.rs  potfile.rs
